--- a/ionic/ionic/www/matches/templates/tripMatch.html
+++ b/ionic/ionic/www/matches/templates/tripMatch.html
@@ -112,6 +112,12 @@
         {{ 'ACCEPTED' | translate }}
       </button>
     </div>
+
+  </div>
+  <div class="row">
+    <div class="margin-auto text-center uber-request-info">
+      <p>You can request an Uber within 15 minutes of your trip</p>
+    </div>
   </div>
 
   <message ng-if="tripMatch.requestInfo.accepted"></message>
