--- a/ionic/ionic/www/templates/tabs.html
+++ b/ionic/ionic/www/templates/tabs.html
@@ -19,7 +19,7 @@
 
 
   <!-- Account Tab -->
-  <ion-tab title="{{ 'MATCHES' | translate }}" icon="icon ion-android-social" href="#/tab/matches">
+  <ion-tab title="{{ 'MATCHES' | translate }}" icon="icon ion-android-social" href="#/tab/matches" badge="matchCount" badge-style="badge-white tab-item-active">
     <ion-nav-view name="tab-matches"></ion-nav-view>
   </ion-tab>
 
