--- a/ionic/ionic/www/dash/templates/noTrips.html
+++ b/ionic/ionic/www/dash/templates/noTrips.html
@@ -1,8 +1,8 @@
 <div class="no-trips">
   <h4 class="text-center">{{'NO_TRIPS_ADDED' | translate}}</h4>
-  <div class="text-center">
+  <div class="text-center" style="margin-bottom: 150px">
     <a ui-sref="tab.dash-edit-trip">
-      <button class="button button-calm button-small larger-text-with-padding icon-left ion-plus-round ">
+      <button class="button button-royal button-small larger-text-with-padding icon-left ion-plus-round ">
         {{'ADD_A_TRIP' | translate}}
       </button>
     </a>
