--- a/ionic/ionic/www/matches/templates/tripMatch.html
+++ b/ionic/ionic/www/matches/templates/tripMatch.html
@@ -32,7 +32,7 @@
 </div>
 <!--rgba(32, 50, 69, .24)-->
 <div class="card trip-match">
-  <div class="row text-center">
+  <div class="text-center">
     <h4 class="text-center margin-auto">{{'MEETUP_INFO' | translate}}</h4>
   </div>
   <div>
